; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetSelectedTitleIdx.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetSelectedTitleIdx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_input = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_player_GetSelectedTitleIdx(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.vlc_player_input*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.vlc_player_input* @vlc_player_get_input_locked(i32* %5)
  store %struct.vlc_player_input* %6, %struct.vlc_player_input** %4, align 8
  %7 = load %struct.vlc_player_input*, %struct.vlc_player_input** %4, align 8
  %8 = icmp ne %struct.vlc_player_input* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.vlc_player_input*, %struct.vlc_player_input** %4, align 8
  %12 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local %struct.vlc_player_input* @vlc_player_get_input_locked(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
